--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
+    "date-fns": "^4.1.0",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.19.2",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/date-fns": "^2.6.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
