package.json -> scripts.build = npm install && next build

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  "dev": "next dev",
+  "build": "npm install && next build",
+  "start": "next start",
+  "lint": "next lint"
+},
   "dependencies": {
     "bootstrap": "^5.3.6",
     "date-fns": "^4.1.0",
